--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     Grid Height:
     <input type="number" id="inputHeight" name="height" min="1" value="10">
     Grid Width:
-    <input type="number" id="inputWeight" name="width" min="1" value="10">
+    <input type="number" id="inputWidth" name="width" min="1" value="10">
     <input type="submit">
   </form>
 
